test/tests/stages/18_structures/invalid_types/tag_resolution/shadow_struct.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[0]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: ptr1
        CSingleInit: 
          CConstant: 
            CConstInt: 
              TInt: 0
            None: 
          None: 
        Pointer: 
          Structure: 
            TIdentifier: s
            Bool: 0
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: s
                  Bool: 0
                  List[0]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: ptr2
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Pointer: 
                    Structure: 
                      TIdentifier: s
                      Bool: 0
                  None: 
            CS: 
              CReturn: 
                CBinary: 
                  CEqual: 
                  CVar: 
                    TIdentifier: ptr1
                    None: 
                  CVar: 
                    TIdentifier: ptr2
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
